--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <%- layout("layouts/boilerplate")%>
 <form action="/login" method="POST" class="needs-validation" novalidate>
   <div class="row mb-5">
-    <h2>login for borrowbasket</h2>
+    <h2>Login</h2>
     <div class="col-6 offset-3">
       
       <div class="mb-3">
